[tool.poetry]
name = "weatherframe"
version = "0.1.0"
description = "Python app to display weather and tides on an Inky 7 e-ink display"
authors = ["Chris Matta <cmatta@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
inky = "^1.5.0"
matplotlib = "^3.7.1"
pandas = "^2.0.0"
requests = "^2.28.2"
scipy = "^1.10.1"
pillow = "^9.5.0"

[tool.poetry.group.dev.dependencies]
jupyter = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
